--- a/MySugarTracker/Views/PatientSugarDatas/Delete.cshtml
+++ b/MySugarTracker/Views/PatientSugarDatas/Delete.cshtml
@@ -44,6 +44,6 @@
             <input type="submit" value="Delete" class="btn btn-default" /> 
         </div>
     @Html.ActionLink("Back to Glucose Reading History ", "Index")
-    <div><p><a href="/Patients/Index">Back to Patient Profile &raquo;</a></p></div>
+    <div><p>@Html.ActionLink("Back to Patient Profile", "../Patients/Index")</p></div>
     }
 </div>
