--- a/MySugarTracker/Views/PatientSugarDatas/Edit.cshtml
+++ b/MySugarTracker/Views/PatientSugarDatas/Edit.cshtml
@@ -47,7 +47,7 @@
 <div>
     @Html.ActionLink("Back to Glucose Reading History", "Index")
 </div>
-<div><p><a href="/Patients/Index">Back to Patient Profile &raquo;</a></p></div>
+<div><p>@Html.ActionLink("Back to Patient Profile", "../Patients/Index")</p></div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
