--- a/MySugarTracker/Views/PatientSugarDatas/Index.cshtml
+++ b/MySugarTracker/Views/PatientSugarDatas/Index.cshtml
@@ -36,4 +36,4 @@
 }
  
 </table>
-<div><p><a href="../Patients/Index">Back to Patient Profile &raquo;</a></p></div>
+<div><p>@Html.ActionLink("Back to Patient Profile", "../Patients/Index")</p></div>
