Changing DR Patient edit links

--- a/MySugarTracker/Views/Patients/Edit.cshtml
+++ b/MySugarTracker/Views/Patients/Edit.cshtml
@@ -161,7 +161,21 @@
     
 }
 
-
+<div class="row">
+    <div class="col-md-4">
+        <h2>Diagnostic Tools</h2>
+        <p><a href="http://www.diagnosispro.com/"><img width="210" src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcRo_mTetRMpZG8vOHcbO9pHN74Z4Qy1KyarrmRs5b52nDa6QrU" /> </a></p>
+    </div>
+    <div class="col-md-4">
+        <h2>Electronic Medical Record</h2>
+        <p><a href="http://www.epic.com/"><img width="210" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSYOalGHbBy8lAcJmZLYB2G9DwNp3ecsSywSVmd4HL0hjhZf8hG" /> </a></p>
+     
+    </div>
+    <div class="col-md-4">
+        <h2>Diabetes Equipment</h2>
+        <p><a href="http://www.onetouch.com/onetouch-ultra2"><img width="210" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQWwqVUvhREn9PkISWOa_O5NJmekb147DCcpiM3f11kunRh0DFklw" /> </a></p>
+    </div>
+</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
