--- a/MySugarTracker/Views/Patients/Edit.cshtml
+++ b/MySugarTracker/Views/Patients/Edit.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Patient Information and Glucose Chart for @Html.DisplayFor(model => model.FirstName) @Html.DisplayFor(model => model.LastName)</h2>
+<h2 align="center">Patient Information and Glucose Chart for @Html.DisplayFor(model => model.FirstName) @Html.DisplayFor(model => model.LastName)</h2>
 <hr />
-<div style="width:100%; height:500px;">@(Model.MyChart)</div>
+<div align="center"; style="width:100%; height:500px;">@(Model.MyChart)</div>
 
 @using (Html.BeginForm())
 {
@@ -151,11 +151,12 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Return to Patient List" class="btn btn-default" href="../Doctor/Index" />
             </div>
-        </div>
+        </div>*@
+        <div><p>@Html.ActionLink("Back to Patient List", "../Doctor/Index")</p></div>
     </div>
 
     
