--- a/MySugarTracker/Content/bootstrap.css
+++ b/MySugarTracker/Content/bootstrap.css
@@ -4506,12 +4506,12 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .navbar-inverse .navbar-brand {
-  color: #007bc9;
+  color: #0a0540;
 }
 
 .navbar-inverse .navbar-brand:hover,
 .navbar-inverse .navbar-brand:focus {
-  color: #392f8a;
+  color: whitesmoke;
   background-color: #039dde;
 }
 
