Fixed save button

--- a/MySugarTracker/Views/Patients/Edit.cshtml
+++ b/MySugarTracker/Views/Patients/Edit.cshtml
@@ -156,7 +156,7 @@
                 <input type="submit" value="Return to Patient List" class="btn btn-default" href="../Doctor/Index" />
             </div>
         </div>*@
-        <div><p>@Html.ActionLink("Back to Patient List", "../Doctor/Index")</p></div>
+        @*<div><p>@Html.ActionLink("Back to Patient List", "Index")</p></div>*@
     </div>
 
     
