--- a/MySugarTracker/Views/Home/About.cshtml
+++ b/MySugarTracker/Views/Home/About.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "MySugarTracker: An application to streamline communication between Doctors and diabetic patients.";
+    ViewBag.Title = "MySugarTracker: An application to streamline communication between doctors and diabetic patients.";
 }
 @{
     ViewBag.Message = "About the Designers of this Application";
@@ -7,4 +7,8 @@
 <h2>@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>MySugarTracker: This application was designed and created by the Blue team: Mark Jensen, Raetoshia Hardy and Justin Langley.  MySugarTracker was created as the final project for the Grand Circus .NET coding boot camp, Spring 2015.</p>
+<p style ="font-size:30px">MySugarTracker: This application was designed and created by the Blue team</p>
+    <p>Mark Jensen <img width="200px" height="200px" src="~/Content/mark.jpg" /></p>
+    <p>Raetoshia Hardy <img width="200px" height="200px" src="~/Content/IMG_3406.jpg" /></p>
+    <p>Justin Langley <img width="200px" height="200px" src="~/Content/Headshot.jpg" /></p>
+    <p style="font-size:15px">  MySugarTracker was created as the final project for the Grand Circus .NET coding boot camp, Spring 2015.</p>
