--- a/MySugarTracker/Views/Patients/Edit.cshtml
+++ b/MySugarTracker/Views/Patients/Edit.cshtml
@@ -19,6 +19,7 @@
 
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.UserID)
+        @Html.HiddenFor(model => model.Email)
 
         <div class="form-group">
             @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
